--- a/gpslogger/build.gradle
+++ b/gpslogger/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "com.mendhak.gradlecrowdin:crowdin-plugin:0.1.0"
         classpath 'org.jacoco:org.jacoco.core:0.7.4.201502262128'
         classpath "com.moowork.gradle:gradle-node-plugin:0.13"
@@ -42,12 +42,12 @@ repositories {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId project.APP_ID
-        minSdkVersion 16
-        targetSdkVersion 28
+        minSdkVersion 28
+        targetSdkVersion 30
 
         versionCode project.APP_VERSION_CODE
         versionName project.APP_VERSION_NAME
@@ -127,10 +127,10 @@ android {
 
 dependencies {
 
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.google.android.gms:play-services-base:16.0.1'
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
-    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
+    implementation 'com.google.android.gms:play-services-base:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
     //FTP operations
     implementation('commons-net:commons-net:3.4')
@@ -146,13 +146,13 @@ dependencies {
 
 
     //Android lollipop/material features including the Toolbar
-    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation 'androidx.appcompat:appcompat:1.0.0'
 
     //Recycler view required by material dialog custom URL alert box
-    implementation "com.android.support:recyclerview-v7:27.1.1"
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
     //Cardviews
-    implementation "com.android.support:cardview-v7:27.1.1"
+    implementation 'androidx.cardview:cardview:1.0.0'
 
     //Material dialogs
     //Change to 0.8.5.7 when released
@@ -175,6 +175,9 @@ dependencies {
     implementation ('com.birbit:android-priority-jobqueue:2.0.1'){
         exclude group: 'com.google.android', module: 'android'
     }
+
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
 
     //Event bus
     implementation 'de.greenrobot:eventbus:2.4.0'
