--- a/gpslogger/src/main/AndroidManifest.xml
+++ b/gpslogger/src/main/AndroidManifest.xml
@@ -18,14 +18,15 @@
     <!-- To check if an internet connection exists before communicating  -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- If the user needs activity recognition -->
-    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION"/>
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
     <!-- If the user needs to use external GPS receiver eg over bluetooth -->
     <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"
                      tools:ignore="MockLocation"/>
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
 
-
-    <!-- allow this to run as a foreground service -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
+    <uses-permission-sdk-23 android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
 
     <application
         android:allowBackup="true"
@@ -55,6 +56,7 @@
             android:uiOptions="splitActionBarWhenNarrow"
             android:windowSoftInputMode="adjustNothing"
             android:clearTaskOnLaunch="true"
+            android:screenOrientation="portrait"
             android:exported="true"
             >
             <intent-filter>
@@ -146,6 +148,7 @@
             </intent-filter>
         </receiver>
         <receiver android:name=".senders.AlarmReceiver" />
+        <receiver android:name=".alarms.ProfileUpdateAlarm" />
 
         <receiver android:name=".MyPackageUpgradeReceiver">
             <intent-filter>
